# AI_OPTIX

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  USER_GUIDE.txt  agent.py  dashboard.py  data_fetcher.py  mock_broker_server.py  pyproject.toml  run_safe.py  test_full_cycle.py
templates/: dashboard.html
