[project]
name = "ai-optix"
version = "0.1.0"
description = "AI_OPTIX - Autonomous AI Trading Agent by Greek Spark"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "openai-agents[litellm,sqlalchemy]>=0.1.0",
    "openalgo>=0.1.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "pytz>=2024.1",
    "numba>=0.60.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "colorama>=0.4.6",
    "ta-lib>=0.4.28",
    "aiosqlite>=0.19.0",
    "fastapi>=0.115.0",
    "websockets>=13.0",
    "yfinance>=0.2.40",
]
